BACKUP/recipies/phpmyadmin/phpmyadmin-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql-phpadmin
  labels:
    app: mysql-phpadmin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-phpadmin
  template:
    metadata:
      labels:
        app: mysql-phpadmin
    spec:
      containers:
        - name: mysql-phpadmin
          image: phpmyadmin
          ports:
            - name: sqladmin
              containerPort: 80
