BACKUP/recipies/phpmyadmin/myphpadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-phpadmin
spec:
  type: LoadBalancer
  ports:
    - name: sqladmin
      port: 8100
      targetPort: 80
  selector:
    app: mysql-phpadmin
